Implemented Directory releated methods

--- a/AWS.Wrappers.S3/Versions/V1_0_0.md
+++ b/AWS.Wrappers.S3/Versions/V1_0_0.md
@@ -7,3 +7,15 @@
 - ***DeleteBucketAsync/DeleteBucket:*** Deletes the bucket if exists
 - ***IsBucketExistsAsync/IsBucketExists:*** Check if bucket exists in S3 or not.
 
+### Operation Related to directory/folder _(S3 Object Technically)_
+
+- ***IsDirectoryExistsAsync/IsDirectoryExists:*** Checks Folder(Key) exists in S3 Bucket
+- ***CreateDirectoryAsync/CreateDirectory:*** Create directory inside give bucket if not exits.
+- ***DeleteDirectoryAsync/DeleteDirectory:*** ​If a folder has files or sub-folders in it, then it won't be deleted​. We need to pass recursive = true in the argument to delete all files and folders inside the given path.
+- ***GetSubDirectoriesAsync/GetSubDirectories:*** It gets the list of subdirectories from the given path.
+- ***GetAllDirectoriesRecursiveAsync/GetAllDirectoriesRecursive:*** It gets the list of directories and sub-directories under the given path.
+
+
+
+
+
